# ai-buyer

./: .env  .env.development  .env.example  AI_ML_SETUP_GUIDE.md  FACEBOOK_API_FIX.md  FACEBOOK_TOKEN_GUIDE.md  INTEGRATION_SUMMARY.md  MULTITOKEN_INTEGRATION.md  QUICK_START.md  README.md  README_DEV.md  TOKEN_TROUBLESHOOTING.md  ai-buyer.code-workspace  ai_buyer.db  browser-extension.crx  browser-extension.pem  check-docker.sh  check_db.py  cleanup.sh  comprehensive_token_test.py  debug_token.py  delete_account.py  docker-compose.yml  facebook-api-test.js  facebook_api_demo.py  facebook_browser_automation.py  facebook_complex_client.py  facebook_enhanced_extractor.py  facebook_raw_analyzer.py  facebook_scraper_backend.py  facebook_scraper_clean.py  facebook_token_extractor.py  facebook_xhr_monitoring.py  index.html  insert_token.py  mock_server.py  package-lock.json  package.json  simple_backend.py  start-local-old.sh  (+14 more)
archive/facebook-app-approach/: StatisticsPage_old.tsx
backend/: Dockerfile  mock_server.py  pyproject.toml  requirements.txt  simple_main.py
backend/api/: main.py
backend/api/routes/: analytics.py  campaigns.py  facebook_accounts.py  facebook_accounts_old.py  predictions.py  rules_engine.py
backend/database/: __init__.py  create_tables.sql  crud.py  models.py  schemas.py
backend/migrations/: 001_clickhouse_schema.sql
backend/ml/: __init__.py
backend/ml/feature_engineering/: facebook_features.py
backend/ml/models/: budget_optimizer.py  ctr_predictor.py
backend/ml/training/: trainer.py
backend/services/: facebook_cookie_client.py  kafka_consumer.py  kafka_producer.py  kafka_rules_processor.py  streaming_service.py
backend/tasks/: __init__.py  data_processing.py  ml_training.py  monitoring.py  optimization.py
browser-extension/: README.md  TROUBLESHOOTING.md  UPDATE_INSTRUCTIONS.md  background.js  content.js  content_simple.js  manifest.json  popup.html  popup.js  popup_new.js  rebuild.sh  test.sh
browser-extension/icons/: create_icons.html  create_icons.js
browser-extension/screenshots/: create_screenshots.html
docker/clickhouse/: config.xml  users.xml
docs/: AI_OVERVIEW_FOR_CLIENT.md  DELETE_ACCOUNT_FUNCTIONALITY.md  DEVELOPMENT_ROADMAP.md  FACEBOOK_API_CAPABILITIES_REPORT.md  FACEBOOK_API_SETUP.md  FACEBOOK_MULTITOKEN_APPROACH.md  FACEBOOK_PERMISSIONS.md  IMPLEMENTATION_STATUS.md  ML_PACKAGES_STATUS.md  MULTITOKEN_IMPLEMENTATION_REPORT.md  PRIVACY_POLICY.md  PROJECT_ANALYSIS_SUMMARY.md  README.md  REFACTORING_COMPLETE.md  RULES_ENGINE_ARCHITECTURE.md  SECURITY_AND_PRODUCTION.md
facebook_raw_data/: analysis.json
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx
frontend/src/components/ai/: AiAnalystDrawer.tsx
frontend/src/components/auto-upload/: AdSetStep.tsx  AdStep.tsx  CampaignStep.tsx  Stepper.tsx  (+2 more)
frontend/src/hooks/: useFacebookApi.ts
frontend/src/lib/: translations.ts
frontend/src/pages/: AddAccountPage.tsx  AiAnalystPage.tsx  AutoRulesPage.tsx  AutoUploadPage.tsx  ConsolePage.tsx  CreativesPage.tsx  DashboardPage.tsx  FacebookAccountsPage.tsx  FacebookAccountsPage.tsx.backup  SettingsPage.tsx  StatisticsPage.tsx  TeamPage.tsx
frontend/src/services/: mlApi.ts
frontend/src/store/: useAppStore.ts
src/: App.tsx  index.css
src/components/: ThemeDemo.tsx
src/components/ai/: AiAnalystDrawer.tsx
src/components/auto-upload/: CampaignStep.tsx  PreviewPanel.tsx  WizardControls.tsx
src/components/facebook/: FacebookAccountManager.tsx  FacebookConfigForm.tsx
src/components/layout/: AppSidebar.tsx  Header.tsx
src/components/ml/: CTRPrediction.tsx
src/components/statistics/: AiInsightsPanel.tsx  SparklineChart.tsx  StatisticsFilters.tsx  StatisticsTable.tsx
src/lib/: translations.ts
src/pages/: AccountsPage.tsx  AutoUploadPage.tsx  BillingsPage.tsx  CreativesPage.tsx  DashboardPage.tsx  FacebookAccountsPage.tsx  FacebookAdAccountsPage.tsx  FacebookPagesPage.tsx  FacebookProxyPage.tsx  FacebookTestPage.tsx  StatisticsPage.tsx
src/services/: facebookApi.ts  mlApi.ts
src/store/: useAppStore.ts
(+6 files in other folders)
